# cookiecutter-ucc

./: .gitignore  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
docs/: devcontainer.md
{{cookiecutter.project_directory_name}}/: globalConfig.json  pyproject.toml
{{cookiecutter.project_directory_name}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_directory_name}}/package/: LICENSE
{{cookiecutter.project_directory_name}}/package/README/: inputs.conf.spec  {{project_directory_name_with_underscore}}_account.conf.spec
{{cookiecutter.project_directory_name}}/package/default/: app.conf  inputs.conf  props.conf  restmap.conf  web.conf
{{cookiecutter.project_directory_name}}/package/default/data/ui/views/: configuration.xml  inputs.xml
