[tool.poetry]
name = "cookiecutter-ucc"
version = "0.1.0"
description = ""
authors = ["Daniel Federschmidt <dfederschmidt@splunk.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.1.8"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
