[tool.poetry]
name = "{{cookiecutter.project_directory_name}}"
version = "0.1.0"
description = "test"
authors = ["asd"]
license = "asd"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
splunk-add-on-ucc-framework = "^5.10.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
